--- a/.github/workflows/Decrypt.yml
+++ b/.github/workflows/Decrypt.yml
@@ -1,4 +1,4 @@
-name: Decrypt Contract Bytecode and Generate ABI
+name: Decrypt Bytecode & Generate ABI
 
 on:
   workflow_dispatch:
@@ -30,8 +30,7 @@ jobs:
         run: |
           python decrypt.py "${{ github.event.inputs.bytecode }}"
 
-      - name: Upload ABI Output as Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: abi-output
-          path: abi_output.json
+      - name: Display ABI Output
+        run: |
+          cat abi_output.json  # Assuming you save your ABI output to a JSON file
+
